--- a/pom.xml
+++ b/pom.xml
@@ -98,5 +98,21 @@
           <artifactId>reflections</artifactId>
           <version>0.10.2</version>
       </dependency>
+
+      <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-lang3</artifactId>
+          <version>3.14.0</version>
+      </dependency>
+      <dependency>
+          <groupId>org.mongodb</groupId>
+          <artifactId>mongodb-driver-sync</artifactId>
+          <version>4.11.1</version>
+      </dependency>
+      <dependency>
+          <groupId>org.mongodb</groupId>
+          <artifactId>mongo-java-driver</artifactId>
+          <version>3.9.0</version>
+      </dependency>
   </dependencies>
 </project>
