feat: scoreboard placeholders

--- a/src/main/resources/settings.yml
+++ b/src/main/resources/settings.yml
@@ -11,15 +11,31 @@ spawn:
   pitch: 0.0
 
 scoreboard:
-  title: "&e&lTulip &7- &f&lFFA"
+  title: "&d&lFree For All"
   lines:
-    - "{sidebar}"
-    - " &7» &fOnline &e{online}&7/&e{max-online}"
-    - " &7» &fRank &e{rank}"
-    - ""
-    - " &7» &fKills &e{kills}"
-    - " &7» &fDeaths &e{deaths}"
-    - " &7» &fKillstreak &e{ks}"
-    - ""
-    - "&eplay.tulipmc.net"
-    - "{sidebar}"
+    spawn:
+      - "{sidebar}"
+      - "&f&lStats"
+      - " &f&l● &rKills &d{kills}"
+      - " &f&l● &rDeaths &d{deaths}"
+      - ""
+      - "&f&lServer"
+      - " &f&l● &rOnline &d{online}"
+      - ""
+      - "&dtulip.club"
+      - "{sidebar}"
+    in-game:
+      - "{sidebar}"
+      - "&fPlaying FFA:"
+      - " &d{kit}"
+      - ""
+      - " &fKills &d{kills}"
+      - " &fDeaths &d{deaths}"
+      - ""
+      - " &fKillstreak: &d{ks}"
+      - " &fPlayers: &d{players}"
+      - ""
+      - "&fYour Ping: &d{ping} ms"
+      - ""
+      - "&dtulip.club"
+      - "{sidebar}"
