--- a/src/main/resources/locale.yml
+++ b/src/main/resources/locale.yml
@@ -1,6 +1,6 @@
 welcome-message:
   - ""
-  - "&e&lFFA &7- &fFree For All"
+  - "&d&lFFA &7- &fFree For All"
   - ""
-  - "&7>> &r&fTo join a game, &eright click &fwith your &esword&f."
+  - "&7>> &r&fTo join a game, &dright click &fwith your &dsword&f."
   - ""
