chore: set held slot to 0 when joining an arena

--- a/src/main/resources/settings.yml
+++ b/src/main/resources/settings.yml
@@ -29,8 +29,8 @@ scoreboard:
       - "&fPlaying FFA:"
       - " &d{kit}"
       - ""
-      - " &fKills &d{kills}"
-      - " &fDeaths &d{deaths}"
+      - " &fKills: &d{kills}"
+      - " &fDeaths: &d{deaths}"
       - ""
       - " &fKillstreak: &d{ks}"
       - " &fPlayers: &d{players}"
