chore: add kdr placeholder to scoreboard lines in config, I forgot :v

--- a/src/main/resources/settings.yml
+++ b/src/main/resources/settings.yml
@@ -18,6 +18,7 @@ scoreboard:
       - "&f&lStats"
       - " &f&l● &rKills: &d{kills}"
       - " &f&l● &rDeaths: &d{deaths}"
+      - " &f&l● &rKDR: &d{KDR}"
       - ""
       - "&f&lServer"
       - " &f&l● &rOnline &d{online}"
