chore: little config stuff

--- a/src/main/resources/settings.yml
+++ b/src/main/resources/settings.yml
@@ -20,7 +20,7 @@ scoreboard:
       - " &f&l● &rDeaths: &d{deaths}"
       - " &f&l● &rKDR: &d{KDR}"
       - ""
-      - "&f&lServer"
+      - "&f&lServer:"
       - " &f&l● &rOnline &d{online}"
       - ""
       - "&dtulip.club"
