fix: not showing health when you shoot another player and prevent that from happening if youre in spawn

--- a/src/main/resources/settings.yml
+++ b/src/main/resources/settings.yml
@@ -20,8 +20,8 @@ scoreboard:
       - " &f&l● &rDeaths: &d{deaths}"
       - " &f&l● &rKDR: &d{KDR}"
       - ""
-      - "&f&lServer:"
-      - " &f&l● &rOnline &d{online}"
+      - "&f&lServer"
+      - " &f&l● &rOnline: &d{online}"
       - ""
       - "&dtulip.club"
       - "{sidebar}"
