feat: Added profile settings (scoreboard only for now)

--- a/src/main/resources/storage/kits.yml
+++ b/src/main/resources/storage/kits.yml
@@ -54,7 +54,7 @@ kits:
         type: DIAMOND_CHESTPLATE
       - ==: org.bukkit.inventory.ItemStack
         type: DIAMOND_HELMET
-    icon: DIAMOND_AXE
+    icon: DIAMOND_SWORD
     icondata: 0
     enabled: true
   NoDebuff:
