chore: ffa create command now checks if the kit is enabled through the KitRepository instead of FFARepository because its causing an error (Obviously cannot get a kit by a non-existing ffa match), no more fall damage in ffa spawn, added a new kit called FistFight and made default kit layout apply if the player joins for the first time

--- a/src/main/resources/storage/kits.yml
+++ b/src/main/resources/storage/kits.yml
@@ -313,3 +313,66 @@ kits:
     icon: MUSHROOM_SOUP
     icondata: 0
     enabled: true
+  FistFight:
+    description: §eDescription of the §dFistFight §ekit.
+    items:
+      - ==: org.bukkit.inventory.ItemStack
+        type: STICK
+      - ==: org.bukkit.inventory.ItemStack
+        type: FISHING_ROD
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - ==: org.bukkit.inventory.ItemStack
+        type: COOKED_BEEF
+        amount: 64
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+      - null
+    armor:
+      - ==: org.bukkit.inventory.ItemStack
+        type: AIR
+        damage: -1
+        amount: 0
+      - ==: org.bukkit.inventory.ItemStack
+        type: AIR
+        damage: -1
+        amount: 0
+      - ==: org.bukkit.inventory.ItemStack
+        type: AIR
+        damage: -1
+        amount: 0
+      - ==: org.bukkit.inventory.ItemStack
+        type: AIR
+        damage: -1
+        amount: 0
+    icon: COOKED_BEEF
+    icondata: 0
+    enabled: true
