chore: just retheming even more

--- a/src/main/resources/settings.yml
+++ b/src/main/resources/settings.yml
@@ -1,14 +1,14 @@
 mongo:
-  databaseName: Tulip
-  connectionString: mongodb://localhost:27017
+  uri: mongodb://localhost:27017
+  database: Tulip
 
 spawn:
   world: world
-  x: -4.5
-  y: 66.0
-  z: 0.5
-  yaw: 0.0
-  pitch: 0.0
+  x: 54.5
+  y: 118.0
+  z: 101.5
+  yaw: 0.01586914
+  pitch: 0.04726013
 
 scoreboard:
   title: "&d&lFree For All"
