--- a/pom.xml
+++ b/pom.xml
@@ -99,20 +99,34 @@
           <version>0.10.2</version>
       </dependency>
 
+      <!-- commons-lang3 -->
       <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-lang3</artifactId>
           <version>3.14.0</version>
       </dependency>
+
+      <!-- mongoDB -->
       <dependency>
           <groupId>org.mongodb</groupId>
           <artifactId>mongodb-driver-sync</artifactId>
           <version>4.11.1</version>
       </dependency>
+
+      <!-- mongoDB -->
       <dependency>
           <groupId>org.mongodb</groupId>
           <artifactId>mongo-java-driver</artifactId>
           <version>3.9.0</version>
+      </dependency>
+
+      <!-- CraftBukkit v1_8_R3 -->
+      <dependency>
+          <groupId>org.bukkit</groupId>
+          <artifactId>craftbukkit</artifactId>
+          <version>1.8.8-R0.1-SNAPSHOT</version>
+          <scope>system</scope>
+          <systemPath>${project.basedir}/lib/CraftBukkit-v1_8_R3.jar</systemPath>
       </dependency>
   </dependencies>
 </project>
