feat: kit editor select menu is now configurable

--- a/src/main/resources/menus/kit-editor-select-menu.yml
+++ b/src/main/resources/menus/kit-editor-select-menu.yml
@@ -1,1 +1,13 @@
 title: "&eSelect a Kit to Edit"
+rows: 5
+button:
+  name: "&d&l{kit} Kit"
+  lore:
+    - ""
+    - "&7&o{description}"
+    - ""
+    - "&eClick to edit!"
+
+glass-border:
+  enabled: true
+  durability: 15
